--- a/MomoKatsu_Kadai-09/Base.lproj/Main.storyboard
+++ b/MomoKatsu_Kadai-09/Base.lproj/Main.storyboard
@@ -11,13 +11,13 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="ViewController" customModule="MomoKatsu_Kadai_09" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="testView" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="MomoKatsu_Kadai_09" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未選択" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hCl-5g-VTb">
-                                <rect key="frame" x="136.66666666666666" y="50" width="119.99999999999997" height="30"/>
+                                <rect key="frame" x="136.66666666666666" y="109" width="119.99999999999997" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="SqP-03-hne"/>
                                     <constraint firstAttribute="width" constant="120" id="bFD-Lz-aZ1"/>
@@ -27,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MfH-pS-PbB">
-                                <rect key="frame" x="276.66666666666669" y="50" width="70" height="40"/>
+                                <rect key="frame" x="276.66666666666669" y="109" width="70" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="70" id="UGb-AM-HC5"/>
                                     <constraint firstAttribute="height" constant="40" id="gUb-rz-zqn"/>
@@ -39,7 +39,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="都道府県" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIg-xU-wVp">
-                                <rect key="frame" x="25" y="50" width="100" height="30"/>
+                                <rect key="frame" x="25" y="109" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Exn-a7-rHE"/>
                                     <constraint firstAttribute="width" constant="100" id="o8x-oR-tjl"/>
@@ -69,10 +69,10 @@
             </objects>
             <point key="canvasLocation" x="-50" y="-27"/>
         </scene>
-        <!--CitySelectViewController-->
+        <!--PrefectureSelectViewController-->
         <scene sceneID="4hS-4J-m60">
             <objects>
-                <viewController title="CitySelectViewController" modalPresentationStyle="fullScreen" id="zpn-JQ-R2a" customClass="CitySelectViewController" customModule="MomoKatsu_Kadai_09" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="PrefectureSelectViewController" modalPresentationStyle="fullScreen" id="zpn-JQ-R2a" customClass="PrefectureSelectViewController" customModule="MomoKatsu_Kadai_09" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="clJ-1e-tSv">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -84,7 +84,7 @@
                                     <navigationItem id="5Kc-Yw-0og">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="D9z-Ju-aBb">
                                             <connections>
-                                                <segue destination="BYZ-38-t0r" kind="show" id="7dz-Hx-aGo"/>
+                                                <action selector="tapCanselButtonItems:" destination="zpn-JQ-R2a" id="yA9-eg-FC8"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -98,16 +98,13 @@
                                     <constraint firstAttribute="width" constant="250" id="ySQ-JR-q1G"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TestCell" id="Mbc-LD-7WI">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TestCell" id="Mbc-LD-7WI">
                                         <rect key="frame" x="0.0" y="50" width="250" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mbc-LD-7WI" id="Xbt-5z-7fr">
-                                            <rect key="frame" x="0.0" y="0.0" width="250" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="223.66666666666666" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="BYZ-38-t0r" kind="show" id="qa9-y8-AVP"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -132,9 +129,6 @@
             <point key="canvasLocation" x="737" y="-27"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="7dz-Hx-aGo"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
