--- a/MomoKatsu_Kadai-09/Base.lproj/Main.storyboard
+++ b/MomoKatsu_Kadai-09/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="testView" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="MomoKatsu_Kadai_09" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="testView" modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="ViewController" customModule="MomoKatsu_Kadai_09" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -35,7 +35,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="入 力"/>
                                 <connections>
-                                    <segue destination="zpn-JQ-R2a" kind="show" id="QUm-ff-f7u"/>
+                                    <segue destination="zpn-JQ-R2a" kind="show" id="W3w-5h-BIA"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="都道府県" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIg-xU-wVp">
@@ -67,7 +67,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-50" y="-27"/>
+            <point key="canvasLocation" x="-51.145038167938928" y="-27.464788732394368"/>
         </scene>
         <!--PrefectureSelectViewController-->
         <scene sceneID="4hS-4J-m60">
@@ -84,7 +84,7 @@
                                     <navigationItem id="5Kc-Yw-0og">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="D9z-Ju-aBb">
                                             <connections>
-                                                <action selector="tapCanselButtonItems:" destination="zpn-JQ-R2a" id="yA9-eg-FC8"/>
+                                                <action selector="tapCanselButtonItems:" destination="zpn-JQ-R2a" id="K1W-1K-u2P"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -98,11 +98,11 @@
                                     <constraint firstAttribute="width" constant="250" id="ySQ-JR-q1G"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TestCell" id="Mbc-LD-7WI">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TestCell" id="Mbc-LD-7WI">
                                         <rect key="frame" x="0.0" y="50" width="250" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mbc-LD-7WI" id="Xbt-5z-7fr">
-                                            <rect key="frame" x="0.0" y="0.0" width="223.66666666666666" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
